[package]
name = "mise-s3-cache"
version = "0.1.3"
edition = "2021"
authors = ["Rusty Phillips <rusty.phillips@gmail.com>"]
description = "Intelligent S3 caching for mise tool installations"
license = "MIT"
repository = "https://github.com/fireboy1919/mise-s3-cache"
keywords = ["mise", "s3", "cache", "tools", "aws"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
aws-config = "1.1.7"
aws-sdk-s3 = "1.15.0"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
tempfile = "3.8"
regex = "1.10"
semver = "1.0"
toml = "0.8"
futures = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["localstack"] }
mockall = "0.12"

[[bin]]
name = "s3-cache"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1